--- a/src/app/admin/all-subscriptions/all-subscriptions.component.html
+++ b/src/app/admin/all-subscriptions/all-subscriptions.component.html
@@ -1,10 +1,18 @@
 <div class="container-fluid table-container">
     <div *ngIf="dataSource.data.length > 0; else emptyData" class="mat-elevation-z8 mt-3">
       <div class="table-content">
-        <table mat-table [dataSource]="dataSource">
+        <table mat-table [dataSource]="dataSource" matSort matSortActive="name">
           <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef>{{'common.name' | translate}}</th>
-            <td mat-cell *matCellDef="let element" class="col-2">{{element.name}}</td>
+            <td mat-cell *matCellDef="let element" class="col-2">
+              <div class="d-flex">
+                <div>{{element.name}}</div>
+                <div class="px-2">
+                  <mat-icon *ngIf="element.isChild" color="primary">child_care</mat-icon>
+                  <mat-icon *ngIf="element.isMain" color="primary">star</mat-icon>
+                </div>
+              </div>
+            </td>
           </ng-container>
       
           <ng-container matColumnDef="mobile">
@@ -12,19 +20,35 @@
             <td mat-cell *matCellDef="let element" class="col-2">{{ element.mobile }}</td>
           </ng-container>
 
+          <ng-container matColumnDef="gender">
+            <th mat-header-cell *matHeaderCellDef>{{'common.gender' | translate}}</th>
+            <td mat-cell *matCellDef="let element" class="col-1">
+              <ng-container [ngSwitch]="element.gender">
+                <div *ngSwitchCase="1">
+                  {{ 'common.male' | translate }}
+                </div>
+                <div *ngSwitchDefault>
+                  {{ 'common.female' | translate }}
+                </div>
+              </ng-container>
+            </td>
+          </ng-container>
+
           <ng-container matColumnDef="birthDate">
             <th mat-header-cell *matHeaderCellDef>{{'common.birthDate' | translate}}</th>
-            <td mat-cell *matCellDef="let element" class="col-2">{{ element.birthDate.toMillis() | date }}</td>
+            <td mat-cell *matCellDef="let element" class="col-2">
+              {{ element.birthDate.toMillis() | date }}
+            </td>
           </ng-container>
 
           <ng-container matColumnDef="age">
             <th mat-header-cell *matHeaderCellDef>{{'common.age' | translate}}</th>
-            <td mat-cell *matCellDef="let element" class="col-2">{{ element.age }}</td>
+            <td mat-cell *matCellDef="let element" class="col-1">{{element.age}}</td>
           </ng-container>
 
           <ng-container matColumnDef="room">
             <th mat-header-cell *matHeaderCellDef>{{'common.room' | translate}}</th>
-            <td mat-cell *matCellDef="let element" class="col-2">
+            <td mat-cell *matCellDef="let element" class="col-3">
               <ng-container *ngIf="element.room; else empty">
                 {{ element.room }}
               </ng-container>
@@ -34,31 +58,37 @@
 
           <ng-container matColumnDef="status">
             <th mat-header-cell *matHeaderCellDef>{{'common.bookingStatus' | translate}}</th>
-            <td mat-cell *matCellDef="let element" class="col-2">
-              <ng-container [ngSwitch]="element.ticketStatus">
+            <td mat-cell *matCellDef="let element" class="col-1">
+              <ng-container [ngSwitch]="element.bookingStatus">
                 <div *ngSwitchCase="2">
-                  <div class="badge badge-info">{{ 'ticketStatus.confirmed' | translate }}</div>
+                  <div class="badge px-2 py-1 badge-info">{{ 'bookingStatus.confirmed' | translate }}</div>
                 </div>
                 <div *ngSwitchCase="3">
-                  <div class="badge badge-warning">{{ 'ticketStatus.duplicated' | translate }}</div>
+                  <div class="badge px-2 py-1 badge-warning">{{ 'bookingStatus.duplicated' | translate }}</div>
                 </div>
                 <div *ngSwitchCase="4">
-                  <div class="badge badge-danger">{{ 'ticketStatus.canceled' | translate }}</div>
+                  <div class="badge px-2 py-1 badge-danger">{{ 'bookingStatus.canceled' | translate }}</div>
                 </div>
                 <div *ngSwitchDefault>
-                  <div class="badge badge-success">{{ 'ticketStatus.new' | translate }}</div>
+                  <div class="badge px-2 py-1 badge-success">{{ 'bookingStatus.new' | translate }}</div>
                 </div>
               </ng-container>
             </td>
           </ng-container>
-  
-  
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
       </div>
+
+      <div class="d-flex justify-content-start p-3">
+       {{'common.total' | translate}}:  {{total}}
+      </div>
+
+      <!-- <mat-paginator [length]="total" [hidePageSize]="true" [showFirstLastButtons]="false"></mat-paginator> -->
       
-      <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons [length]="dataSource.data.length"></mat-paginator>
+      <!-- showFirstLastButtons -->
+      <!-- <mat-paginator [pageSizeOptions]="[5, 10, 25]" [length]="total"
+      (page)="onPageChanged($event)" [pageIndex]="pageIndex" [pageSize]="pageSize"></mat-paginator> -->
     </div>
   </div>
   
