--- a/src/app/admin/major-subscriptions/major-subscriptions.component.html
+++ b/src/app/admin/major-subscriptions/major-subscriptions.component.html
@@ -1,1 +1,127 @@
-<p>major-subscriptions works!</p>
+<div class="container-fluid table-container">
+    <div *ngIf="dataSource.data.length > 0; else emptyData" class="mat-elevation-z8 mt-3">
+        <div class="table-content">
+            <table mat-table [dataSource]="dataSource" matSort matSortActive="name">
+                <ng-container matColumnDef="name">
+                    <th mat-header-cell *matHeaderCellDef>{{'common.name' | translate}}</th>
+                    <td mat-cell *matCellDef="let element">
+                        {{element.name}}         
+                    </td>
+                </ng-container>
+
+                <ng-container matColumnDef="adultsCount">
+                    <th mat-header-cell *matHeaderCellDef>{{'common.adultsCount' | translate}}</th>
+                    <td mat-cell *matCellDef="let element">{{ element.adultsCount }}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="childrenCount">
+                    <th mat-header-cell *matHeaderCellDef>{{'common.childrenCount' | translate}}</th>
+                    <td mat-cell *matCellDef="let element">{{ element.childrenCount }}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="roomId">
+                    <th mat-header-cell *matHeaderCellDef>{{'common.room' | translate}}</th>
+                    <td mat-cell *matCellDef="let element">
+                        <ng-container *ngIf="element.room; else empty">
+                            {{ element.room }}
+                        </ng-container>
+                        <ng-template #empty>---</ng-template>
+                    </td>
+                </ng-container>
+
+                <ng-container matColumnDef="bookingType">
+                    <th mat-header-cell *matHeaderCellDef>{{'common.bookingType' | translate}}</th>
+                    <td mat-cell *matCellDef="let element">
+                        <ng-container [ngSwitch]="element.bookingType">
+                            <div *ngSwitchCase="1">
+                                {{ 'common.individual' | translate }}
+                            </div>
+                            <div *ngSwitchDefault>
+                                {{ 'common.group' | translate }}
+                            </div>
+                        </ng-container>
+                    </td>
+                </ng-container>
+
+                <ng-container matColumnDef="bookingDate">
+                    <th mat-header-cell *matHeaderCellDef>{{'common.bookingDate' | translate}}</th>
+                    <td mat-cell *matCellDef="let element">{{ element.bookingDate.toMillis() | date }}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="totalCost">
+                    <th mat-header-cell *matHeaderCellDef>{{'common.totalCost' | translate}}</th>
+                    <td mat-cell *matCellDef="let element">{{element.age}}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="paid">
+                    <th mat-header-cell *matHeaderCellDef>{{'common.paid' | translate}}</th>
+                    <td mat-cell *matCellDef="let element">{{element.paid}}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="remaining">
+                    <th mat-header-cell *matHeaderCellDef>{{'common.remaining' | translate}}</th>
+                    <td mat-cell *matCellDef="let element">{{element.remaining}}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="bookingStatus">
+                    <th mat-header-cell *matHeaderCellDef>{{'common.bookingStatus' | translate}}</th>
+                    <td mat-cell *matCellDef="let element">
+                        <ng-container [ngSwitch]="element.bookingStatus">
+                            <div *ngSwitchCase="2">
+                                <div class="badge px-2 py-1 badge-info">{{ 'bookingStatus.confirmed' | translate }}</div>
+                            </div>
+                            <div *ngSwitchCase="3">
+                                <div class="badge px-2 py-1 badge-warning">{{ 'bookingStatus.duplicated' | translate }}
+                                </div>
+                            </div>
+                            <div *ngSwitchCase="4">
+                                <div class="badge px-2 py-1 badge-danger">{{ 'bookingStatus.canceled' | translate }}
+                                </div>
+                            </div>
+                            <div *ngSwitchDefault>
+                                <div class="badge px-2 py-1 badge-success">{{ 'bookingStatus.new' | translate }}</div>
+                            </div>
+                        </ng-container>
+                    </td>
+                </ng-container>
+
+                <ng-container matColumnDef="userNotes">
+                    <th mat-header-cell *matHeaderCellDef>{{'common.notes' | translate}}</th>
+                    <td mat-cell *matCellDef="let element">{{element.userNotes}}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="status">
+                    <th mat-header-cell *matHeaderCellDef>{{'common.bookingStatus' | translate}}</th>
+                    <td mat-cell *matCellDef="let element">
+                        <ng-container [ngSwitch]="element.bookingStatus">
+                            <div *ngSwitchCase="2">
+                                <div class="badge px-2 py-1 badge-info">{{ 'bookingStatus.confirmed' | translate }}</div>
+                            </div>
+                            <div *ngSwitchCase="3">
+                                <div class="badge px-2 py-1 badge-warning">{{ 'bookingStatus.duplicated' | translate }}
+                                </div>
+                            </div>
+                            <div *ngSwitchCase="4">
+                                <div class="badge px-2 py-1 badge-danger">{{ 'bookingStatus.canceled' | translate }}
+                                </div>
+                            </div>
+                            <div *ngSwitchDefault>
+                                <div class="badge px-2 py-1 badge-success">{{ 'bookingStatus.new' | translate }}</div>
+                            </div>
+                        </ng-container>
+                    </td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+        </div>
+
+        <div class="d-flex justify-content-start p-3">
+            {{'common.total' | translate}}: {{total}}
+        </div>
+    </div>
+</div>
+
+<ng-template #emptyData>
+    <app-empty-data></app-empty-data>
+</ng-template>
