--- a/src/app/home/ticket/ticket.component.html
+++ b/src/app/home/ticket/ticket.component.html
@@ -1,4 +1,4 @@
-<div class="row mx-0 pb-4" [class.pt-4]="type === model.ticketType.individual">
+<div class="row mx-0 pb-4" [class.pt-4]="model.selectedType === model.bookingType.individual">
     <form [formGroup]="model.form" #categoryForm="ngForm" novalidate class="col-12" (ngSubmit)="save(categoryForm)">
         <div class="rounded primary-section col-12 pt-3">
             <div class="w-100 d-flex px-2 pb-2">
@@ -88,7 +88,7 @@
                 <div *ngFor="let participant of model.participants.controls; let i=index" class="rounded col-12 mt-3 pt-3"
                 [ngClass]="isChild(i) ? 'child-section' : 'adult-section'">
                     <div [formGroupName]="i">
-                        <div *ngIf="type === model.ticketType.group" class="d-flex w-100 align-items-center justify-content-between">
+                        <div *ngIf="model.selectedType === model.bookingType.group" class="d-flex w-100 align-items-center justify-content-between">
                             <div class="d-flex align-items-center">
                                 <div class="d-flex justify-content-center align-items-center text-light count mx-2">{{i+1}}</div>
                                 {{ ( isChild(i) ? 'common.child' : 'common.individual') | translate}}
@@ -187,7 +187,7 @@
             </ng-container>
         </ng-container>
 
-        <div *ngIf="type === model.ticketType.group && model.participants.controls.length < 4" class="mt-3">
+        <div *ngIf="model.selectedType === model.bookingType.group && model.participants.controls.length < 4" class="mt-3">
             <button type="button" mat-stroked-button color="primary" (click)="addAdult()">{{'common.AddAdult' | translate}}</button>
             <button type="button" mat-stroked-button color="primary" (click)="addChild()" class="child-btn">{{'common.addChild' | translate}}</button>
         </div>
