--- a/src/app/shared/components/empty-data/empty-data.component.html
+++ b/src/app/shared/components/empty-data/empty-data.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid px-0 mt-4">
   <div class="py-5 justify-content-center d-flex border rounded bg-white">
     <mat-icon matSuffix>info</mat-icon>
-    <span class="px-1">No Data Found</span>
+    <span class="px-1">{{'common.noDataFound' | translate}}</span>
   </div>
 </div>
