--- a/src/app/admin/major-subscriptions/major-subscriptions.component.html
+++ b/src/app/admin/major-subscriptions/major-subscriptions.component.html
@@ -111,6 +111,18 @@
                         </ng-container>
                     </td>
                 </ng-container>
+                <ng-container matColumnDef="actions">
+                    <th mat-header-cell *matHeaderCellDef></th>
+                    <td mat-cell *matCellDef="let element">
+                        <button mat-icon-button color="primary" [matMenuTriggerFor]="menu">
+                            <i class="fa-solid fa-ellipsis"></i>
+                        </button>
+                        <mat-menu #menu="matMenu">
+                            <button mat-menu-item class="primary" (click)="update(element)">{{'common.edit' | translate}}</button>
+                            <button mat-menu-item class="text-danger" (click)="delete(element)">{{'common.delete' | translate}}</button>
+                        </mat-menu>
+                    </td>
+                  </ng-container>
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
