--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -20,3 +20,8 @@
         padding: 0 10px !important;
     }
 }
+
+.bg {
+    background-image: url('/assets/images/background.png');
+    background-size: cover;
+}
