Text center welcome message

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,7 @@
         </div>
     </ng-container>
     <ng-container *ngIf="!isReservationStart">
-        <div class="bg h-100 w-100 d-flex justify-content-center align-items-center">
+        <div class="bg h-100 w-100 d-flex justify-content-center align-items-center text-center">
             <div class="alert alert-info" [innerHTML]="setting[0].welcomeMessage"></div>
         </div>
     </ng-container>
