--- a/src/app/admin/reservation/reservation.component.html
+++ b/src/app/admin/reservation/reservation.component.html
@@ -214,12 +214,12 @@
             </ng-container>
         </ng-container>
 
-        <ng-container *ngIf="!canManageReservation">
+        <ng-container>
             <div *ngIf="model.selectedType === model.bookingType.group && model.participants.controls.length < 4" class="mt-3">
                 <button type="button" mat-stroked-button color="primary" (click)="addAdult()">{{'common.AddAdult' | translate}}</button>
                 <button type="button" mat-stroked-button color="primary" (click)="addChild()" class="child-btn">{{'common.addChild' | translate}}</button>
             </div>
-            <div class="col-12 pt-3 px-md-2 px-0 d-flex justify-content-end">
+            <div *ngIf="!canManageReservation" class="col-12 pt-3 px-md-2 px-0 d-flex justify-content-end">
                 <button mat-flat-button type="submit" color="primary">
                     {{'common.addBooking' | translate}}
                 </button>
