--- a/src/app/admin/primary/primary.component.html
+++ b/src/app/admin/primary/primary.component.html
@@ -50,7 +50,9 @@
 
                 <ng-container matColumnDef="totalCost">
                     <th mat-header-cell *matHeaderCellDef>{{'common.totalCost' | translate}}</th>
-                    <td mat-cell *matCellDef="let element">{{element.age}}</td>
+                    <td mat-cell *matCellDef="let element">
+                        {{reservationPrice * (1 + element.adultsCount + element.childrenCount) }}
+                    </td>
                 </ng-container>
 
                 <ng-container matColumnDef="paid">
@@ -60,7 +62,9 @@
 
                 <ng-container matColumnDef="remaining">
                     <th mat-header-cell *matHeaderCellDef>{{'common.remaining' | translate}}</th>
-                    <td mat-cell *matCellDef="let element">{{element.remaining}}</td>
+                    <td mat-cell *matCellDef="let element">
+                        {{ (reservationPrice * (1 + element.adultsCount + element.childrenCount)) - element.paid }}
+                    </td>
                 </ng-container>
 
                 <ng-container matColumnDef="bookingStatus">
